white space on the right fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,19 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 html {
+    
+    padding: 0;
+    margin: 0;
     scroll-behavior: smooth;
 }
 
@@ -146,7 +158,8 @@ button:focus {
     border: none;
 }
 
-.modal-header {
+.modal-header, .modal-footer {
+    color: white;
     background-color: #A2B1B6;
 }
 
